--- a/binary_tree_traversal.ipynb
+++ b/binary_tree_traversal.ipynb
@@ -83,11 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "class binaryTreeTraversal:\n",
+    "    # preorder traversal\n",
     "    def preorderTraversal(self, root: TreeNode) -> list[int]:\n",
     "        if root == None:\n",
     "            return []\n",
@@ -141,6 +142,25 @@
     "            else:\n",
     "                stack.append(currNode)\n",
     "                currNode = currNode.right\n",
+    "        return res\n",
+    "\n",
+    "    # level order traversal\n",
+    "    def levelOrder(self, root: TreeNode) -> list[list[int]]:\n",
+    "        if root == None:\n",
+    "            return []\n",
+    "        res = []\n",
+    "        queue = []\n",
+    "        queue.append(root)\n",
+    "        while len(queue) != 0:\n",
+    "            curLevelSize = len(queue)\n",
+    "            res.append([])\n",
+    "            for i in range(curLevelSize):\n",
+    "                curNode = queue.pop(0)\n",
+    "                res[-1].append(curNode.val)\n",
+    "                if curNode.left != None:\n",
+    "                    queue.append(curNode.left)\n",
+    "                if curNode.right != None:\n",
+    "                    queue.append(curNode.right)\n",
     "        return res"
    ]
   },
@@ -155,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,14 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "traversal = binaryTreeTraversal()\n",
     "preorder = traversal.preorderTraversal(root)\n",
     "inorder = traversal.inorderTraversal(root)\n",
-    "postorder = traversal.postorderTraversal(root)"
+    "postorder = traversal.postorderTraversal(root)\n",
+    "levelorder = traversal.levelOrder(root)"
    ]
   },
   {
@@ -195,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "traversal = binaryTreeTraversal()\n",
     "preorder = traversal.preorderTraversal(root)\n",
     "inorder = traversal.inorderTraversal(root)\n",
-    "postorder = traversal.postorderTraversal(root)"
+    "postorder = traversal.postorderTraversal(root)\n",
+    "levelorder = traversal.levelOrder(root)"
    ]
   }
  ],
