Add the traversal results
Add the traversal results of every binary tree

--- a/binary_tree_traversal.ipynb
+++ b/binary_tree_traversal.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +208,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 8, 3, 6, 9, 7, 10, 11]\n",
+      "[2, 8, 5, 1, 6, 9, 3, 10, 7, 11]\n",
+      "[8, 5, 2, 9, 6, 10, 11, 7, 3, 1]\n",
+      "[[1], [2, 3], [5, 6, 7], [8, 9, 10, 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preorder)\n",
+    "print(inorder)\n",
+    "print(postorder)\n",
+    "print(levelorder)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -216,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +264,29 @@
     "inorder = traversal.inorderTraversal(root)\n",
     "postorder = traversal.postorderTraversal(root)\n",
     "levelorder = traversal.levelOrder(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5]\n",
+      "[1, 4, 3, 5]\n",
+      "[4, 5, 3, 1]\n",
+      "[[1], [3], [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(preorder)\n",
+    "print(inorder)\n",
+    "print(postorder)\n",
+    "print(levelorder)"
    ]
   }
  ],
