--- a/binary_tree_traversal.ipynb
+++ b/binary_tree_traversal.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +78,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class of binary tree traversal"
+    "## Class of binary tree traversal\n",
+    "\n",
+    "### Iteration algorithm to traverse binary tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class binaryTreeTraversal:\n",
+    "class iterativeBinaryTreeTraversal:\n",
     "    # preorder traversal\n",
     "    def preorderTraversal(self, root: TreeNode) -> list[int]:\n",
     "        if root == None:\n",
@@ -168,6 +170,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Recursive algorithm to traverse binary tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class recursiveBinaryTreeTraversal:\n",
+    "    # preorder traversal \n",
+    "    def preorderTraversal(self, root: TreeNode) -> list[int]:\n",
+    "        if root == None:\n",
+    "            return []\n",
+    "        res = []\n",
+    "        # root -> left -> right\n",
+    "        res.append(root.val)\n",
+    "        res += self.preorderTraversal(root.left)\n",
+    "        res += self.preorderTraversal(root.right)\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "    # inorder traversal\n",
+    "    def inorderTraversal(self, root: TreeNode) -> list[int]:\n",
+    "        if root == None:\n",
+    "            return []\n",
+    "        res = []\n",
+    "        # left -> root -> right\n",
+    "        res += self.inorderTraversal(root.left)\n",
+    "        res.append(root.val)\n",
+    "        res += self.inorderTraversal(root.right)\n",
+    "\n",
+    "        return res\n",
+    "\n",
+    "    # postorder traversal\n",
+    "    def postorderTraversal(self, root: TreeNode) -> list[int]:\n",
+    "        if root == None:\n",
+    "            return []\n",
+    "        res = []\n",
+    "        # left -> right -> root\n",
+    "        res += self.postorderTraversal(root.left)\n",
+    "        res += self.postorderTraversal(root.right)\n",
+    "        res.append(root.val)\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Case\n",
     "\n",
     "### Case 1"
@@ -175,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,20 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traversal = binaryTreeTraversal()\n",
-    "preorder = traversal.preorderTraversal(root)\n",
-    "inorder = traversal.inorderTraversal(root)\n",
-    "postorder = traversal.postorderTraversal(root)\n",
-    "levelorder = traversal.levelOrder(root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,10 +264,42 @@
     }
    ],
    "source": [
+    "# iterative result\n",
+    "iterTraversal = iterativeBinaryTreeTraversal()\n",
+    "preorder = iterTraversal.preorderTraversal(root)\n",
+    "inorder = iterTraversal.inorderTraversal(root)\n",
+    "postorder = iterTraversal.postorderTraversal(root)\n",
+    "levelorder = iterTraversal.levelOrder(root)\n",
     "print(preorder)\n",
     "print(inorder)\n",
     "print(postorder)\n",
     "print(levelorder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 8, 3, 6, 9, 7, 10, 11]\n",
+      "[2, 8, 5, 1, 6, 9, 3, 10, 7, 11]\n",
+      "[8, 5, 2, 9, 6, 10, 11, 7, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recursive results\n",
+    "recurTraversal = recursiveBinaryTreeTraversal()\n",
+    "preorder = recurTraversal.preorderTraversal(root)\n",
+    "inorder = recurTraversal.inorderTraversal(root)\n",
+    "postorder = recurTraversal.postorderTraversal(root)\n",
+    "print(preorder)\n",
+    "print(inorder)\n",
+    "print(postorder)"
    ]
   },
   {
@@ -239,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,20 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "traversal = binaryTreeTraversal()\n",
-    "preorder = traversal.preorderTraversal(root)\n",
-    "inorder = traversal.inorderTraversal(root)\n",
-    "postorder = traversal.postorderTraversal(root)\n",
-    "levelorder = traversal.levelOrder(root)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -283,11 +342,50 @@
     }
    ],
    "source": [
+    "# iteration result\n",
+    "iterTraversal = iterativeBinaryTreeTraversal()\n",
+    "preorder = iterTraversal.preorderTraversal(root)\n",
+    "inorder = iterTraversal.inorderTraversal(root)\n",
+    "postorder = iterTraversal.postorderTraversal(root)\n",
+    "levelorder = iterTraversal.levelOrder(root)\n",
     "print(preorder)\n",
     "print(inorder)\n",
     "print(postorder)\n",
     "print(levelorder)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 4, 5]\n",
+      "[1, 4, 3, 5]\n",
+      "[4, 5, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# recursive results\n",
+    "recurTraversal = recursiveBinaryTreeTraversal()\n",
+    "preorder = recurTraversal.preorderTraversal(root)\n",
+    "inorder = recurTraversal.inorderTraversal(root)\n",
+    "postorder = recurTraversal.postorderTraversal(root)\n",
+    "print(preorder)\n",
+    "print(inorder)\n",
+    "print(postorder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
