--- a/binary_tree_traversal.ipynb
+++ b/binary_tree_traversal.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary Tree Traversal"
+    "# Binary Tree"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definition for a binary tree node"
+    "## Binary Tree Traversal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definition for a binary tree node"
    ]
   },
   {
@@ -34,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a binary tree\n",
+    "### Create a binary tree\n",
     "Create a binary tree according to a list"
    ]
   },
@@ -50,7 +57,6 @@
     "    :param nums: A tabular representation of a binary tree\n",
     "    :return: root node of a binary tree\n",
     "    \"\"\"\n",
-    "\n",
     "    if len(nums) == 0 or nums == None:\n",
     "        return None\n",
     "    n = len(nums)\n",
@@ -78,9 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Class of binary tree traversal\n",
+    "### Class of binary tree traversal\n",
     "\n",
-    "### Iteration algorithm to traverse binary tree"
+    "#### Iteration algorithm to traverse binary tree"
    ]
   },
   {
@@ -170,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recursive algorithm to traverse binary tree"
+    "#### Recursive algorithm to traverse binary tree"
    ]
   },
   {
@@ -221,9 +227,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Case\n",
+    "#### Case\n",
     "\n",
-    "### Case 1"
+    "##### Case 1"
    ]
   },
   {
@@ -306,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Case 2"
+    "##### Case 2"
    ]
   },
   {
@@ -378,6 +384,146 @@
     "print(preorder)\n",
     "print(inorder)\n",
     "print(postorder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bulid Binary Tree\n",
+    "\n",
+    "Rebuild the binary tree from the traversal sequence of the binary tree\n",
+    "\n",
+    "### Ordinary Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class bulidTree:\n",
+    "    def preorderInorder(self, preorder: list, inorder: list) -> TreeNode:\n",
+    "        \"\"\"\n",
+    "        Rebuild a binary tree based on preorder traversal and inorder traversal of the binary tree.\n",
+    "        :type preorder: list\n",
+    "        :type inorder: list\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        if not preorder:\n",
+    "            return None\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        pivotIndex = 0\n",
+    "        for i in range(len(inorder)):\n",
+    "            if inorder[i] == preorder[0]:\n",
+    "                pivotIndex = i\n",
+    "                break\n",
+    "        \n",
+    "        root.left = self.preorderInorder(preorder[1:pivotIndex + 1], inorder[0:pivotIndex])\n",
+    "        root.right = self.preorderInorder(preorder[pivotIndex + 1:], inorder[pivotIndex + 1:])\n",
+    "        return root\n",
+    "\n",
+    "\n",
+    "    def postorderInorder(self, inorder: list, postorder: list) -> TreeNode:\n",
+    "        \"\"\"\n",
+    "        Rebuild a binary tree based on postorder traversal and inorder traversal of the binary tree.\n",
+    "        :type inorder: list\n",
+    "        :type postorder: list\n",
+    "        :rtype: TreeNode\n",
+    "        \"\"\"\n",
+    "        if not postorder:\n",
+    "            return None\n",
+    "        root = TreeNode(postorder[-1])\n",
+    "        pivotIndex = 0\n",
+    "        for i in range(len(inorder)):\n",
+    "            if root.val == inorder[i]:\n",
+    "                pivotIndex = i\n",
+    "                break\n",
+    "\n",
+    "        root.left = self.postorderInorder(inorder[0:pivotIndex], postorder[0:pivotIndex])\n",
+    "        root.right = self.postorderInorder(inorder[pivotIndex + 1:], postorder[pivotIndex:-1])\n",
+    "        return root\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Case\n",
+    "\n",
+    "Use the case 1 of binary tree traversal results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preorder = [1, 2, 5, 8, 3, 6, 9, 7, 10, 11]\n",
+    "inorder = [2, 8, 5, 1, 6, 9, 3, 10, 7, 11]\n",
+    "postorder = [8, 5, 2, 9, 6, 10, 11, 7, 3, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 8, 3, 6, 9, 7, 10, 11]\n",
+      "[2, 8, 5, 1, 6, 9, 3, 10, 7, 11]\n",
+      "[8, 5, 2, 9, 6, 10, 11, 7, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# build the tree with its traversal sequences and check it with its according traversal results\n",
+    "# use preorder and inorder\n",
+    "bulidTreeInstance = bulidTree()\n",
+    "root = bulidTreeInstance.preorderInorder(preorder, inorder)\n",
+    "# check its preorder, inorder and postorder traversal results\n",
+    "traversal = recursiveBinaryTreeTraversal()\n",
+    "preorderBuild = traversal.preorderTraversal(root)\n",
+    "inorderBuild = traversal.inorderTraversal(root)\n",
+    "postorderBuild = traversal.postorderTraversal(root)\n",
+    "print(preorderBuild)\n",
+    "print(inorderBuild)\n",
+    "print(postorderBuild)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 5, 8, 3, 6, 9, 7, 10, 11]\n",
+      "[2, 8, 5, 1, 6, 9, 3, 10, 7, 11]\n",
+      "[8, 5, 2, 9, 6, 10, 11, 7, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use inorder and postorder\n",
+    "bulidTreeInstance = bulidTree()\n",
+    "root = bulidTreeInstance.postorderInorder(inorder, postorder)\n",
+    "# check its preorder, inorder and postorder traversal results\n",
+    "traversal = recursiveBinaryTreeTraversal()\n",
+    "preorderBuild = traversal.preorderTraversal(root)\n",
+    "inorderBuild = traversal.inorderTraversal(root)\n",
+    "postorderBuild = traversal.postorderTraversal(root)\n",
+    "print(preorderBuild)\n",
+    "print(inorderBuild)\n",
+    "print(postorderBuild)"
    ]
   },
   {
